--- a/thirdDime/static/js/question/question6.modal.html
+++ b/thirdDime/static/js/question/question6.modal.html
@@ -29,14 +29,14 @@
           <div flex="20">
             <div layout="column">
               <div flex ng-show="showResult61"><br/><br/>
-                <div ng-show="result61"><h1>BRAVO</h1></div>
+                <div ng-show="result61"><h1>CORRECT !</h1></div>
                 <div ng-hide="result61"><h1>It is FUTURISM</h1></div>
               </div>
               <md-radio-group ng-model="movement.paint1" flex="70">
-                <md-radio-button value="Impressionism" aria-label="Label 1" ng-click="answer61('Impressionism')">Impressionism</md-radio-button>
-                <md-radio-button value="Fauvism" aria-label="Label 2" ng-click="answer61('Fauvism')"> Fauvism </md-radio-button>
-                <md-radio-button value="Cubism" aria-label="Label 3" ng-click="answer61('Cubism')">Cubism</md-radio-button>
-                <md-radio-button value="Futurism" aria-label="Label 4" ng-click="answer61('Futurism')">Futurism</md-radio-button>
+                <md-radio-button value="Impressionism" aria-label="Label 1" ng-click="answer61('Impressionism')">Impressionism [Light]</md-radio-button>
+                <md-radio-button value="Fauvism" aria-label="Label 2" ng-click="answer61('Fauvism')"> Fauvism [Color]</md-radio-button>
+                <md-radio-button value="Cubism" aria-label="Label 3" ng-click="answer61('Cubism')">Cubism [Space]</md-radio-button>
+                <md-radio-button value="Futurism" aria-label="Label 4" ng-click="answer61('Futurism')">Futurism [Motion]</md-radio-button>
               </md-radio-group>
             </div>
           </div>
@@ -46,14 +46,14 @@
           <div flex="20">
             <div layout="column">
               <div flex ng-show="showResult62"><br/><br/>
-                <div ng-show="result62"><h1>BRAVO</h1></div>
+                <div ng-show="result62"><h1>CORRECT !</h1></div>
                 <div ng-hide="result62"><h1>It is FAUVISM</h1></div>
               </div>
               <md-radio-group ng-model="movement.paint2" flex="70">
-                <md-radio-button value="Impressionism" aria-label="Label 1" ng-click="answer62('Impressionism')">Impressionism</md-radio-button>
-                <md-radio-button value="Fauvism" aria-label="Label 2" ng-click="answer62('Fauvism')"> Fauvism </md-radio-button>
-                <md-radio-button value="Cubism" aria-label="Label 3" ng-click="answer62('Cubism')">Cubism</md-radio-button>
-                <md-radio-button value="Futurism" aria-label="Label 4" ng-click="answer62('Futurism')">Futurism</md-radio-button>
+                <md-radio-button value="Impressionism" aria-label="Label 1" ng-click="answer62('Impressionism')">Impressionism [Light]</md-radio-button>
+                <md-radio-button value="Fauvism" aria-label="Label 2" ng-click="answer62('Fauvism')"> Fauvism [Color]</md-radio-button>
+                <md-radio-button value="Cubism" aria-label="Label 3" ng-click="answer62('Cubism')">Cubism [Space]</md-radio-button>
+                <md-radio-button value="Futurism" aria-label="Label 4" ng-click="answer62('Futurism')">Futurism [Motion]</md-radio-button>
               </md-radio-group>
             </div>
           </div>
@@ -63,14 +63,14 @@
           <div flex="20">
             <div layout="column">
               <div flex ng-show="showResult63"><br/><br/>
-                <div ng-show="result63"><h1>BRAVO</h1></div>
+                <div ng-show="result63"><h1>CORRECT !</h1></div>
                 <div ng-hide="result63"><h1>It is IMPRESSIONISM</h1></div>
               </div>
               <md-radio-group ng-model="movement.paint3" flex="70">
-                <md-radio-button value="Impressionism" aria-label="Label 1" ng-click="answer63('Impressionism')">Impressionism</md-radio-button>
-                <md-radio-button value="Fauvism" aria-label="Label 2" ng-click="answer63('Fauvism')"> Fauvism </md-radio-button>
-                <md-radio-button value="Cubism" aria-label="Label 3" ng-click="answer63('Cubism')">Cubism</md-radio-button>
-                <md-radio-button value="Futurism" aria-label="Label 4" ng-click="answer63('Futurism')">Futurism</md-radio-button>
+                <md-radio-button value="Impressionism" aria-label="Label 1" ng-click="answer63('Impressionism')">Impressionism [Light]</md-radio-button>
+                <md-radio-button value="Fauvism" aria-label="Label 2" ng-click="answer63('Fauvism')"> Fauvism [Color]</md-radio-button>
+                <md-radio-button value="Cubism" aria-label="Label 3" ng-click="answer63('Cubism')">Cubism [Space]</md-radio-button>
+                <md-radio-button value="Futurism" aria-label="Label 4" ng-click="answer63('Futurism')">Futurism [Motion]</md-radio-button>
               </md-radio-group>
             </div>
           </div>
@@ -80,15 +80,15 @@
           <div flex="20">
             <div layout="column">
               <div flex ng-show="showResult64"><br/><br/>
-                <div ng-show="result64"><h1>BRAVO</h1></div>
+                <div ng-show="result64"><h1>CORRECT !</h1></div>
                 <div ng-hide="result64"><h1>It is CUBISM</h1></div>
               </div>
             </div>
               <md-radio-group ng-model="movement.paint4" flex="70">
-                <md-radio-button value="Impressionism" aria-label="Label 1" ng-click="answer64('Impressionism')">Impressionism</md-radio-button>
-                <md-radio-button value="Fauvism" aria-label="Label 2" ng-click="answer64('Fauvism')"> Fauvism </md-radio-button>
-                <md-radio-button value="Cubism" aria-label="Label 3" ng-click="answer64('Cubism')">Cubism</md-radio-button>
-                <md-radio-button value="Futurism" aria-label="Label 4" ng-click="answer64('Futurism')">Futurism</md-radio-button>
+                <md-radio-button value="Impressionism" aria-label="Label 1" ng-click="answer64('Impressionism')">Impressionism [Light]</md-radio-button>
+                <md-radio-button value="Fauvism" aria-label="Label 2" ng-click="answer64('Fauvism')"> Fauvism [Color]</md-radio-button>
+                <md-radio-button value="Cubism" aria-label="Label 3" ng-click="answer64('Cubism')">Cubism [Space]</md-radio-button>
+                <md-radio-button value="Futurism" aria-label="Label 4" ng-click="answer64('Futurism')">Futurism [Motion]</md-radio-button>
               </md-radio-group>
           </div>
         </div>
