--- a/thirdDime/static/js/funda/funda10.modal.html
+++ b/thirdDime/static/js/funda/funda10.modal.html
@@ -1,11 +1,11 @@
 <md-dialog aria-label="Mango (Fruit)" class="funda">
 	<md-content style="background-color: {{color}}; color: white;">
 		<br/><br/>
-	We hope you liked this experience. There is plenty more heading your ally. Meanwhile we would love to hear your thoughts on this painting. Give us a peek on our FB page. ;)
+	We hope you liked this experience. There is plenty more heading your ally. Meanwhile we would love to hear your thoughts on this painting. Give us a peek ;)
 	</md-content>
 	<div class="md-actions" layout="row" style="background-color: {{color}}; color: black">
-		<ul ng-social-buttons data-url="'http://thirddime.com'" data-title="'ThirdDime'" data-description="'Behind the BrushStrokes'" data-image="'http://thirddime.com/static/images/p2.jpg'">
-		    <li> SHARE QUIZ:</li>
+		<ul ng-social-buttons data-url="'http://thirddime.com'" data-title="'ThirdDime'" data-description="'Behind the BrushStrokes'" data-image="'http://thirddime.com/static/images/backup/thoughts.jpg'">
+		    <li> SHARE THOUGHTS:</li>
 		    <li class="ng-social-facebook" analytics-on="click"  analytics-event="SocShareInQuizFB">FaceBook</li>
 		    <li class="ng-social-google-plus" analytics-on="click"  analytics-event="SocShareInQuizG+">Google+</li>
 		    <li class="ng-social-twitter" analytics-on="click"  analytics-event="SocShareInQuizTwtr">Twitter</li>
